login/logout, jwt keys extracted
