# database/types.go
@@ -11,6 +11,15 @@ type Range struct {
 	Latitude  float64   `db:"LATITUDE"`
 	Longitude float64   `db:"LONGITUDE"`
 	URL       string    `db:"URL"`
-	Created   time.Time `db:"CREATED_TS"`
 	Active    bool      `db:"ACTIVE"`
+	Created   time.Time `db:"CREATED_TS"`
+}
+
+// User represents records in users table
+type User struct {
+	ID       int64     `db:"ID"`
+	Login    string    `db:"LOGIN"`
+	Password string    `db:"PASSWORD"`
+	Active   bool      `db:"ACTIVE"`
+	Created  time.Time `db:"CREATED_TS"`
 }
