# restapi/operations/login/login_user_responses.go
@@ -1,6 +1,6 @@
 // Code generated by go-swagger; DO NOT EDIT.
 
-package user
+package login
 
 // This file was generated by the swagger tool.
 // Editing this file might prove futile when you re-run the swagger generate command
@@ -106,11 +106,16 @@ func (o *LoginUserOK) WriteResponse(rw http.ResponseWriter, producer runtime.Pro
 // LoginUserBadRequestCode is the HTTP code returned for type LoginUserBadRequest
 const LoginUserBadRequestCode int = 400
 
-/*LoginUserBadRequest Invalid username/password supplied
+/*LoginUserBadRequest Invalid payload or empty login passed
 
 swagger:response loginUserBadRequest
 */
 type LoginUserBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIResponse `json:"body,omitempty"`
 }
 
 // NewLoginUserBadRequest creates LoginUserBadRequest with default headers values
@@ -119,10 +124,69 @@ func NewLoginUserBadRequest() *LoginUserBadRequest {
 	return &LoginUserBadRequest{}
 }
 
+// WithPayload adds the payload to the login user bad request response
+func (o *LoginUserBadRequest) WithPayload(payload *models.APIResponse) *LoginUserBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user bad request response
+func (o *LoginUserBadRequest) SetPayload(payload *models.APIResponse) {
+	o.Payload = payload
+}
+
 // WriteResponse to the client
 func (o *LoginUserBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
 
-	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
-
 	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// LoginUserUnauthorizedCode is the HTTP code returned for type LoginUserUnauthorized
+const LoginUserUnauthorizedCode int = 401
+
+/*LoginUserUnauthorized Invalid username/password supplied
+
+swagger:response loginUserUnauthorized
+*/
+type LoginUserUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.APIResponse `json:"body,omitempty"`
+}
+
+// NewLoginUserUnauthorized creates LoginUserUnauthorized with default headers values
+func NewLoginUserUnauthorized() *LoginUserUnauthorized {
+
+	return &LoginUserUnauthorized{}
+}
+
+// WithPayload adds the payload to the login user unauthorized response
+func (o *LoginUserUnauthorized) WithPayload(payload *models.APIResponse) *LoginUserUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the login user unauthorized response
+func (o *LoginUserUnauthorized) SetPayload(payload *models.APIResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *LoginUserUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
 }
